--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html data-ng-app="materialAdmin" data-ng-controller="materialadminCtrl as mactrl">
+    <html data-ng-app="POEApp" data-ng-controller="materialadminCtrl as mactrl">
 
     <head>
         <meta charset="utf-8">
@@ -62,11 +62,17 @@
         <!-- App level -->
         <script src="js/app.js"></script>
         <script src="js/config.js"></script>
-        <script src="js/controllers/main.js"></script>
-        <script src="js/factories/factory.js"></script>
         <script src="js/services.js"></script>
         <script src="js/templates.js"></script>
+        
+        <script src="js/controllers/main.js"></script>
         <script src="js/controllers/ui-bootstrap.js"></script>
+        <script src="js/controllers/access.controller.js"></script>
+
+        <script src="js/factories/web3js.factory.js"></script>
+        <script src="js/factories/ipfs.factory.js"></script>
+        <script src="js/factories/users.factory.js"></script>
+        
 
 
         <!-- Template Modules -->
