--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta property="og:title" content="proof-o-existence">
+        <meta property="og:description" content="Blockchain proof of proof of existence">
+        <meta property="og:image" content="https://phzietsman.github.io/proof-o-existence/README/about.png">
+        <meta property="og:url" content="https://phzietsman.github.io/proof-o-existence/ui/index.html">
+        <meta name="twitter:card" content="summary_large_image">
+        
         <title>PoE</title>
 
         <!-- Vendor CSS -->
