--- a/ui/index.html
+++ b/ui/index.html
@@ -35,6 +35,7 @@
 
         <!-- Core -->
         <script src="vendors/bower_components/jquery/dist/jquery.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script> -->
 
         <!-- Angular -->
         <script src="vendors/bower_components/angular/angular.min.js"></script>
